--- a/hello_world.yml
+++ b/hello_world.yml
@@ -1,6 +1,4 @@
-- name: Hello World Sample
-  hosts: all
-  tasks:
-    - name: Hello Message
-      debug:
-        msg: "Hello World!"
+# Run a script that creates a file, but only if the file is not yet created
+- script: /some/local/create_file.sh --some-arguments 1234
+  args:
+    creates: /tmp/file.txt
