--- a/hello_world.yml
+++ b/hello_world.yml
@@ -1,4 +1,6 @@
-# Run a script that creates a file, but only if the file is not yet created
-- script: /some/local/create_file.sh --some-arguments 1234
-  args:
-    creates: /tmp/file.txt
+- name: Transfer and execute a script.
+  hosts: all
+  tasks:
+
+     - name: Copy and Execute the script 
+       script: /home/user/userScript.sh
