--- a/hello_world.yml
+++ b/hello_world.yml
@@ -1,4 +1,5 @@
 - name: Transfer and execute a script.
+  hosts: all
   tasks:
      - name: Copy and Execute the script 
        script: /tmp/test.sh
