--- a/hello_world.yml
+++ b/hello_world.yml
@@ -1,5 +1,11 @@
 - name: Transfer and execute a script.
   hosts: all
   tasks:
-     - name: Copy and Execute the script 
-       script: /tmp/test.sh
+  - name: touch
+    file: path=/tmp/test1.txt state=touch
+
+  - name: file
+    file: path=/tmp/test1.txt mode=777
+
+  - name: copy
+    copy:  src=/tmp/test1.txt dest=/tmp/test2.txt remote_src=yes
