--- a/hello_world.yml
+++ b/hello_world.yml
@@ -10,6 +10,5 @@
   - name: copy
     copy:  src=/tmp/test1.txt dest=/tmp/test2.txt remote_src=yes
 	
-  - name: Execute the command in remote shell; stdout goes to the specified file on the remote.
-    shell: /tmp/test.sh >> somelog.txt
-	
+  - name: copy11
+    shell:  /tmp/test.sh >> somelog.txt
