--- a/hello_world.yml
+++ b/hello_world.yml
@@ -8,4 +8,4 @@
   - name: copy
     copy:  src=/tmp/test1.txt dest=/tmp/test2.txt remote_src=yes
   - name: copy11
-    shell:  /tmp/test.sh >> somelog.txt
+    shell:  /tmp/test.sh >> /tmp/somelog.txt
